syntax = "proto3";
package spqr;

option go_package = "spqr/proto";

import "google/protobuf/empty.proto";

service PoolService {
  rpc ListPools(google.protobuf.Empty) returns (ListPoolsResponse) {}
}

message ListPoolsResponse {
repeated PoolInfo pools = 1;
}

message PoolInfo {
  string Id = 1;
  string DB = 2;
  string Usr = 3;
  string Host = 4;
  int64 ConnCount = 5;
  int64 IdleConnCount = 6;
  int64 QueueSize = 7;
  string RouterName = 8;
}
